--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -10,3 +10,10 @@
           production: "製作中"
           ready_to_ship: "発送準備中"
           sent: "発送済み"
+      order_detail:
+        production_status:
+          cannot_be_manufactured: "製作不可"
+          waiting_for_production: "製作待ち"
+          in_productions: "製作中"
+          production_completed: "制作完了"
+          
