--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,5 +15,5 @@
           cannot_be_manufactured: "製作不可"
           waiting_for_production: "製作待ち"
           in_productions: "製作中"
-          production_completed: "制作完了"
+          production_completed: "製作完了"
           
